--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,4 +4,7 @@ sqlalchemy==2.0.23
 psycopg2-binary==2.9.9
 python-dotenv==1.0.0
 pydantic==2.5.0
+httpx==0.25.2
+python-jose[cryptography]==3.3.0
+python-multipart==0.0.6
 
